# hypa-thymesia

./: .env  .gitignore  .mcp.json  CLAUDE.md  PROJECT_CONTEXT.md  README.md  SUPABASE_DATABASE_BACKUP.md  TODOOOOOOOOOOOOOO  WEBHOOK_SETUP.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  tmpclaude-0371-cwd
.claude/: settings.local.json
app/: db.py  dbtest.py  dependencies.py  image_db.py  main.py  test.py  text_db.py  text_db_test.py
app/routers/: embed.py  ingest.py
backend/: .env.example  Dockerfile  celery_app.py  celery_tasks.py  main.py  pyproject.toml
backend-ragie/: .env.example  Dockerfile  README.md  SETUP_GUIDE.md  __init__.py  main.py  pyproject.toml  robust-weaving-eich.md
backend-ragie/core/: __init__.py  api_key_auth.py  config.py  deps.py  encryption.py  rate_limiting.py  security.py  sse.py  user_limits.py
backend-ragie/migrations/: 001_create_ragie_documents_table.sql  002_add_thumbnail_support.sql
backend-ragie/routers/: __init__.py  api_keys.py  audit.py  documents.py  google_drive.py  groups.py  health.py  ragie_webhooks.py  search.py  storage.py  stripe_payments.py  user_settings.py  videos.py
backend-ragie/schemas/: __init__.py  document.py  search.py  user.py  video.py
backend-ragie/services/: __init__.py  google_drive_service.py  ragie_service.py  supabase_service.py  thumbnail_service.py  video_service.py
backend/config/: object_labels.json
backend/core/: config.py  deps.py  security.py  token_encryption.py  user_limits.py
backend/data_upload/: pinecone_services.py  supabase_deep_embed_services.py  supabase_image_services.py  supabase_text_services.py
backend/embed/: clip_text_embedder.py  text_embedder.py
backend/formatting/: __init__.py  batch_formatter.py  formatting_client.py
backend/ingestion/: ingest_common.py
backend/ingestion/text/: extract_pptx.py  extract_text.py  extract_text_from_docx.py  extract_text_from_pdf.py  extract_text_from_txt.py
backend/rag/: graph.py
backend/routers/: __init__.py  addFromGoogleDrive.py  addFromOneDrive.py  chat.py  delete.py  files.py  formatting.py  gdrive.py  groups.py  ingest.py  onedrive.py  query.py  storage.py  stripe_payments.py  tagging.py  upload.py  user_settings.py  video.py
backend/schemas/: ingest.py
backend/scripts/: bm25_reranker.py  highlighting.py
backend/tagging/: __init__.py  background_tasks.py  document_tagger.py  label_embedder.py
backend/tests/: ingest_pdf_test.py  test_embedders.py  test_supabase_routes.py
backend/utils/: db_helpers.py
data_upload/: pinecone_service.py  pinecone_services.py  supabase_image_services.py  supabase_image_upload.py  supabase_text_services.py
db/: image_db.py
db/texts/: Adrian Conan Doyle.txt  Grellingen railway station.docx
embed/: embeddings.py  image_embedder.py  text_embedder.py
frontend/: .env.example  BACKEND_RAGIE_MIGRATION.md  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/components/: BodyCard.vue  ColorPicker.vue  FileGrid.vue  GoogleDriveLinkCard.vue  GroupSelect.vue  OneDriveLinkCard.vue  ResultList.vue  UsageDisplay.vue  header.vue
frontend/composables/: useApiKeys.ts  useChat.ts  useDocumentUploadNotifications.ts  useDocuments.ts  useFiles.ts  useGoogleDrive.ts  useGooglePicker.ts  useGroups.ts  useGroupsApi.ts  useGroupsCache.ts  useIngest.ts  useOneDrive.ts  useQuota.ts  useSearch.ts  useStripe.ts  useVideoCache.ts  useVideos.ts
frontend/data/: demo-config.ts
frontend/middleware/: auth.ts
frontend/pages/: account.vue  dashboard.vue  index.vue  login.vue  pricing.vue  privacy.vue  reset-password.vue  terms.vue  test.vue
frontend/pages/auth/: callback.vue
frontend/types/: google-drive.ts
hypa-thymesia-video-query/: .env.example  Dockerfile  celery_app.py  celery_config.py  main.py  pyproject.toml  run.py  tmpclaude-a517-cwd
hypa-thymesia-video-query/src/storage/: database.py  supabase_service.py  unified_database.py
ideas/: projectplan.txt
ingestion/text/: extract_text_from_docx.py
old-setup/backend/: .dockerignore  celery_config.py  main.py
old-setup/hypa-thymesia-video-query/: celery_tasks.py
old-setup/services/: Dockerfile  pyproject.toml
old-setup/services/app/: __init__.py  celery_config.py
old-setup/services/app/config/: document_labels.json
old-setup/services/app/routers/: __init__.py  formatting.py  tagging.py
old-setup/services/app/services/: __init__.py  image_tagger.py  ollama_formatter.py
routes/: image_routes.py  supabase_image_routes.py  supabase_text_routes.py
services/: .env.example  Dockerfile  README.md  celery_config.py  pyproject.toml
services/app/: celery_app.py  celery_tasks.py  main.py
services/app/core/: __init__.py  config.py
services/app/schemas/: __init__.py  formatting.py
services/app/services/: document_tagger.py
tests/: ingest_pdf_test.py  test_embedders.py  test_pinecone_upload.py  test_supabase_routes.py
(+41 files in other folders)
