[project]
name = "hypa-thymesia"
version = "0.1.0"
description = ""
authors = [
    {name = "elilourens",email = "elilourens123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "chromadb (>=1.0.15,<2.0.0)",
    "langgraph (>=0.5.3,<0.6.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "ollama (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
