[tool.poetry]
name = "formatting-service"
version = "1.0.0"
description = "Text chunk formatting microservice using Ollama LLM"
authors = ["Your Name <your@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
ollama = "^0.5.0"
python-dotenv = "^1.0.0"
# Image tagging dependencies
numpy = "^1.26.0"
pillow = "^10.0.0"
sentence-transformers = "^3.0.0"
transformers = "^4.40.0"
torch = "^2.0.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
